--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,16 @@
 }
 
 .change-color-button {
-  padding: 2rem 3rem;
-  border-radius: 20px;
-  border: 1px solid;
+  padding: 0.5rem 1rem;
+  border: none;
+  background: none;
+  transition: transform 100ms;
+}
+
+.change-color-button:hover {
+  transform: scale(1.2);
+}
+
+.change-color-button:active {
+  transform: scale(1);
 }
